<resources>
    <string name="app_name">Twitter Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn_text">SignIn with Twitter</string>
    <string name="logout_btn">SignOut</string>
    <string name="tweet_info">Tweet on what\'s happening?</string>
    <string name="tweet">Tweet</string>

    <string name="hello">Hello, </string>
    <string name="login_instructions">Login to twiter</string>
    <string name="share_instructions">Enter share message</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_share">Share</string>

    <!-- Twitter Configurations -->
    <string name="twitter_callback">oauth://t4jsample</string>
    <string name="twitter_consumer_key">Your Consumer Key</string>
    <string name="twitter_consumer_secret">Your Consumer Secret Key</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <!-- End Configurations -->
</resources>
