<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0080B4"
            android:padding="20dp"
            android:onClick="loginUser"
            android:text="@string/login_btn_text"
            android:textColor="#fff"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0080B4"
            android:layout_below="@+id/user_profilePicture"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp" />

        <ImageView
            android:id="@+id/user_profilePicture"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/tweet_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#cceaf3"
            android:hint="@string/tweet_info"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:padding="10dp"
            android:layout_above="@+id/tweet_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="33dp" />

        <Button
            android:id="@+id/tweet_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#0080B4"
            android:onClick="postTweet"
            android:text="@string/tweet"
            android:textColor="#fff"
            android:layout_above="@+id/logout_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="28dp" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#0080B4"
            android:onClick="logoutUser"
            android:text="@string/logout_btn"
            android:textColor="#fff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</LinearLayout>